--- a/index.html
+++ b/index.html
@@ -3,52 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Cards</title>
+    <title>Stylish Product Cards</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <style>
         body {
-            background: linear-gradient(135deg, #667eea, #764ba2);
+            background: linear-gradient(135deg, #1e3c72, #2a5298);
             color: white;
-            font-family: 'Arial', sans-serif;
-        }
-        .card {
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-            transition: transform 0.3s, box-shadow 0.3s;
-            background: white;
-            color: black;
-        }
-        .card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-        }
-        .btn-primary {
-            background-color: #ff5733;
-            border: none;
-            transition: background 0.3s, transform 0.2s;
-        }
-        .btn-primary:hover {
-            background-color: #c70039;
-            transform: scale(1.1);
+            font-family: 'Poppins', sans-serif;
+            overflow-x: hidden;
         }
         h2 {
             font-weight: bold;
-            text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            text-shadow: 2px 2px 15px rgba(255, 255, 255, 0.3);
+            margin-bottom: 20px;
+        }
+        .card {
+            border-radius: 15px;
+            overflow: hidden;
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            background: white;
+            color: black;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+            position: relative;
+        }
+        .card:hover {
+            transform: translateY(-10px) scale(1.05);
+            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
+        }
+        .card img {
+            height: 200px;
+            object-fit: cover;
+            transition: transform 0.4s ease;
+        }
+        .card:hover img {
+            transform: scale(1.1);
+        }
+        .card-body {
+            text-align: center;
+        }
+        .btn-custom {
+            background: linear-gradient(45deg, #ff416c, #ff4b2b);
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 30px;
+            font-weight: bold;
+            transition: all 0.3s ease-in-out;
+            position: relative;
+            overflow: hidden;
+        }
+        .btn-custom::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: rgba(255, 255, 255, 0.3);
+            transition: all 0.4s ease-in-out;
+        }
+        .btn-custom:hover::before {
+            left: 100%;
+        }
+        .btn-custom:hover {
+            transform: scale(1.1);
+            box-shadow: 0 5px 15px rgba(255, 72, 72, 0.6);
         }
     </style>
 </head>
 <body>
-    <div class="container mt-4">
-        <h2 class="text-center mb-4">Our Products</h2>
-        <div id="product-list" class="row"></div>
+    <div class="container mt-5">
+        <h2>Our Stylish Products</h2>
+        <div id="product-list" class="row justify-content-center"></div>
     </div>
 
     <script>
     const products = [
-        { id: 1, name: "Smartphone", price: "$699", image: "https://via.placeholder.com/150" },
-        { id: 2, name: "Laptop", price: "$999", image: "https://via.placeholder.com/150" },
-        { id: 3, name: "Headphones", price: "$199", image: "https://via.placeholder.com/150" },
-        { id: 4, name: "Smartwatch", price: "$299", image: "https://via.placeholder.com/150" }
+        { id: 1, name: "Smartphone", price: "$699", image: "./Css Card_files/watch.jpg" },
+        { id: 2, name: "Laptop", price: "$999", image: "./Css Card_files/laptop.jpg" },
+        { id: 3, name: "Headphones", price: "$199", image: "./Css Card_files/headphones.jpg" },
+        { id: 4, name: "Smartwatch", price: "$299", image: "./Css Card_files/watches.jpg" }
     ];
 
     const productList = document.getElementById("product-list");
@@ -58,12 +93,12 @@
         productCard.classList.add("col-md-3", "mb-4");
 
         productCard.innerHTML = `
-            <div class="card shadow-sm">
+            <div class="card">
                 <img src="${product.image}" class="card-img-top" alt="${product.name}">
-                <div class="card-body text-center">
+                <div class="card-body">
                     <h5 class="card-title">${product.name}</h5>
                     <p class="card-text">${product.price}</p>
-                    <button class="btn btn-primary">Buy Now</button>
+                    <button class="btn btn-custom">Buy Now</button>
                 </div>
             </div>
         `;
